fixed some responsive layout problems

--- a/src/components/componentStyle/editor.scss
+++ b/src/components/componentStyle/editor.scss
@@ -18,7 +18,7 @@
     }
   }
   .fold-sidebar-active {
-    left: 60px;
+    left: 50px;
   }
   .dialog-box {
     width: 340px !important;
@@ -45,7 +45,7 @@
     }
   }
   .fold-sidebar-active {
-    left: 60px;
+    left: 50px;
   }
   .dialog-box {
     width: 460px !important;
